--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							The Ohio State University<br/>
 							<html>
 							
-							 <p><a href="file:///Users/phillips.1622/Downloads/html5up-spectral/CVCaprice.pdf">CV</a></p>
+							 <p><a href="CVCaprice.pdf">CV</a></p>
 							 </html>
 							
 						</div>
