--- a/index.html
+++ b/index.html
@@ -92,15 +92,17 @@
 						
 							</div>
 						</section>
+						
 						<section class="spotlight">
 							<div class="image"><img src="images/superearth.jpg" alt="" /></div><div class="content">
 								<h2>Research<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							</h2>
+								<p>I am interested in astronomical research involving exoplanet detection, exoplanet atmospheres, brown dwarf characterization, planetary formation and evolution  and 
+								substellar evolution. Learn more about my research <a href='research.html'> here. </a></p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/sunset.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/nasa.jpg" alt="" /></div><div class="content">
 								<h2>Outreach and Education Work</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 							</div>
