--- a/personal.html
+++ b/personal.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Spectral by HTML5 UP</title>
+		<title>About Me</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -29,6 +29,8 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="research.html">Research</a></li>
 											<li><a href="publications.html">Publications</a></li>
+											<li><a href="presentations.html">Posters and Presentations</a></li>
+
 
 											<li><a href="outreach.html">Outreach and Education</a></li>
 											<li><a href="personal.html">About Me</a></li>
@@ -51,9 +53,9 @@
 							<div class="inner">
 								<h3>Mini Bio</h3>
 								<p> I was born and raised Hot Springs, Arkansas, where I graduated from Hot Springs High School. Hot Springs is a small town  that hosts Hot Springs National Park, which is famous for the naturally occurring geothermal springs and  historic bathhouses. 
-								I attended the University of Arkansas at Little Rock in Little Rock,
-								 Arkansas where I was a Ronald E. McNair Scholar. <a href="https://mcnairscholars.com/about/"> The McNair Scholars Program </a> introduced me to the realm of research and to the possibility of obtaining a PhD.
-								  When I'm not coding or working at school, I enjoy crafting, cooking, and trying my hand at new recipes. 
+								For my undergraduate degree, I attended the University of Arkansas at Little Rock in Little Rock,
+								 Arkansas where I was a Ronald E. McNair Scholar. <a href="https://mcnairscholars.com/about/"  style="color:#21b2a6"> The McNair Scholars Program </a> introduced me to the realm of research and to the possibility of obtaining a PhD.
+								  When I'm not coding or working at school, I enjoy reading, crafting, cooking, and trying my hand at new recipes. 
 					  I also enjoy attending comic conventions to let out my inner nerd. I am passionate about social justice along with equity & inclusion work in astronomy and STEM in general.<p>
 											<div class="row gtr-50 gtr-uniform">
 										
@@ -68,18 +70,18 @@
 
 								<h3>Exploring Nature through National Parks and State Parks</h3>
 								<p> Over the past few years, I have had the opportunity to work as a Night Skies Assistant
-								in the National Park Service through the  <a href="https://www.mosaicsinscience.org"> Mosaics in Science Internship Program </a>. In 2016, I worked at Sleeping Bear Dunes National 
+								in the National Park Service through the  <a href="https://www.mosaicsinscience.org"  style="color:#21b2a6"> Mosaics in Science Internship Program </a>. In 2016, I worked at Sleeping Bear Dunes National 
 								Lakeshore in Empire, Michigan. At Sleeping Bear Dunes, I worked with park staff to provide a detailed documentation of the lighting inventory as the park prepared to apply to become a Dark Sky Park. I also developed astronomy activities for their Inaugural Astronomy 
 								Day and  collected measurements of the quality of the night sky. <p>
-								<p> In 2019, I also worked as a Night Skies Assistant at Sequoia National Park in Three Rivers, California. I worked in the Mineral King area of the park, which you can access after a 20 mile scenic drive up a winding mountain where you arrive at a destination 7500  feet above sea level. Mineral King  is a very quaint area with no cell service
+								<p> In 2019, I also worked as a Night Skies Assistant at Sequoia National Park in Three Rivers, California. I lived in the Mineral King area of the park, which you can access after a 20 mile scenic drive up a winding mountain where you arrive at a destination 7500  feet above sea level. Mineral King  is a very quaint area with no cell service
 								and  minimal sound and light pollution. I witnessed some of the most astonishing clear night skies there!
-								I created and implemented the first astronomy evening program for the remote Mineral King area  and developed a mobile interpretation station that included topics concerning light pollution and night skies. I presented my work at the Department of the Interior in Washington D.C, check it out<a href=file:///Users/phillips.1622/Downloads/html5up-spectral/Caprice_Phillips_Sequoia_Workshop_Presentation.pdf>  here </a>.  <p>
+								I created and implemented the first astronomy evening program for the remote Mineral King area  and developed a mobile interpretation station that included topics concerning light pollution and night skies. I presented my work at the Department of the Interior in Washington D.C, check it out<a href="Caprice_Phillips_Sequoia_Workshop_Presentation.pdf" style="color:#21b2a6" >  here </a>.  <p>
 											<section>
 								<h5> Check out some of my favorite photos from my adventures in nature!
 									<div class="box alt">
 										<div class="row gtr-50 gtr-uniform">
 										
-											<div class="col-4"><span class="image fit"><img src="images/caprice_waterfall.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/caprice_waterfall.jpg" alt="Caprice Phillips in front of waterfall" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/lake.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/mineral_king2.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/honolulu2.jpg" alt="" /></span></div>
