--- a/publications.html
+++ b/publications.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+]<!DOCTYPE HTML>
 <!--
 	Spectral by HTML5 UP
 	html5up.net | @ajlkn
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Publications</title>
+		<title>Caprice Phillips</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Publications</a></h1>
+						<h1><a href="index.html">Caprice Phillips</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -52,8 +52,9 @@
 						<section class="wrapper style5">
 							<div class="inner">
 
-								<h6>Check out my publications listed below. You can also find them at ADS or Google Scholar, or through my research gate</h6>
-								<p>I need to update my publications page when I finish my paper on 2M0443+3723B</p>
+								<h4>Check out my publications listed below. My work can also be accessed through ADS or Google Scholar</h4>
+					
+								<li><b>Phillips,C</b>., Bowler, B., Mace, G., Liu, M., Sokal.,K  <a href="https://ui.adsabs.harvard.edu/abs/2020ApJ...896..173P/abstract" style="color:#21b2a6"> <i>2MASS J04435686+3723033 B: A Young Companion at the Substellar Boundary with Potential Membership in the β Pictoris Moving Group</i><a></li>
 							</div>
 						</section>
 					</article>
@@ -86,3 +87,4 @@
 
 	</body>
 </html>
+	
